Fix game of life controls z-index issue

--- a/src/components/GameOfLife/Controls/styles.css
+++ b/src/components/GameOfLife/Controls/styles.css
@@ -5,10 +5,10 @@
 }
 
 .game-of-life__toggle {
+	z-index: 1;
 	position: fixed;
 	bottom: 3rem;
 	right: 3rem;
-
 	cursor: pointer;
 	width: 60px;
 	height: 60px;
@@ -19,6 +19,7 @@
 }
 
 .game-of-life__panel {
+	z-index: 2;	
 	box-shadow: 0 0 5px rgba(0,0,0,0.15);
 	position: fixed;
 	bottom: 3rem;
